src/assets/styles/pages/admin_project_document.scss
@use '../base/normalize';
@use '../base/common';
@use '../base/mixins-lib';
@use '../base/variables';

.project_document_page,
.project_channel_page {
  @include mixins-lib.setContainerPC(variables.$spacing_72, variables.$spacing_72);

  .container {
    height: calc(100vh - 112px);
    @include mixins-lib.tabletStart() {
      height: calc(100vh - 118px);
    }
  }

  .content {
    display: flex;
    flex-direction: column;
    position: relative;
    height: 100%;

    @include mixins-lib.tabletStart() {
      padding-bottom: variables.$spacing_64;
      box-sizing: border-box;
    }
  }

  .box_top {
    flex: none;
    @include mixins-lib.tabletStart() {
      display: none;
    }
  }

  .box_tab {
    flex: none;
    margin-top: variables.$spacing_24;

    @include mixins-lib.tabletStart() {
      margin-top: 0;
    }
  }

  .document_list_area,
  .channel_list_area {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    padding-top: variables.$spacing_48;

    @include mixins-lib.tabletStart() {
      padding: variables.$spacing_40 variables.$spacing_32 0;
    }

    @include mixins-lib.mobileStart() {
      padding: variables.$spacing_40 variables.$spacing_16 0;
    }

    .code_block_box {
      padding-top: variables.$spacing_24;
    }
  }

  .search {
    flex: none;
    @include mixins-lib.tabletStart() {
      padding: 0;
    }
  }

  .document_table {
    overflow-y: auto;
    height: 100%;
    margin-top: variables.$spacing_16;

    @include mixins-lib.tabletStart() {
      padding-top: variables.$spacing_8;
    }
  }

  .document_header {
    position: relative;
  }

  .document_detail_area {
    display: flex;
    flex-wrap: wrap;
    padding-top: variables.$spacing_48;
    height: 100%;
    overflow-y: auto;

    @include mixins-lib.tabletStart() {
      padding: variables.$spacing_40 variables.$spacing_32 0;
    }

    @include mixins-lib.mobileStart() {
      padding: variables.$spacing_40 variables.$spacing_16 0;
    }
  }

  .sidebar {
    display: flex;
    flex-direction: column;
    position: sticky;
    top: 0;
    width: 248px;
    height: 100%;

    @include mixins-lib.tabletStart() {
      display: none;
    }

    .document_list {
      padding-top: variables.$spacing_16;
    }

    .document_table {
      .td {
        padding: variables.$spacing_16 variables.$spacing_32;
      }

      .no_bg .desc {
        font-size: 1.4rem;
      }
    }
  }

  .detail_content {
    display: flex;
    flex-direction: column;
    width: calc(100% - 248px);
    height: 100%;
    padding-left: 103px;
    box-sizing: border-box;

    @include mixins-lib.tabletStart() {
      width: 100%;
      padding: 0;
    }
  }

  .codeblock_header {
    margin-top: variables.$spacing_8;

    @include mixins-lib.tabletStart() {
      margin-top: variables.$spacing_16;
    }

    .toast_box {
      left: auto;
      right: 0;
      transform: translate(0, calc(-100% - 16px));
    }
  }

  .codeblock,
  .codeblock_tree_box {
    border-radius: 0 0 4px 4px;
    border-top: 0;
    overflow: auto;
    flex: 1;
  }

  .placeholder_box {
    padding: 80px 20px;
  }

  .pagination {
    margin-top: variables.$spacing_32;
  }

  .schemas_header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 variables.$spacing_16;

    .title {
      font-size: 1.8rem;
      line-height: 1.34;
      font-weight: 600;
      color: var(--gray-800);
    }
  }

  .schema_title_inner input {
    font-size: 2rem;
  }

  .schema_form {
    display: flex;
    flex-direction: column;
    height: 100%;

    .schema_editor_box {
      flex: 1;
      min-height: 0;
      display: flex;
      flex-direction: column;
      padding: variables.$spacing_24 0;
    }
    .schema_editor {
      flex: 1;
      min-height: 0;
    }
  }

  .cm-editor {
    background: var(--gray-000);
    border: 1px solid var(--gray-400);
    border-radius: 4px;
    overflow: hidden;
    font-size: 1em;
    line-height: 1.5;
    tab-size: 4;

    &.cm-focused {
      outline: none;
    }

    .cm-gutters {
      background: var(--gray-50);
      color: var(--gray-500);
    }

    .cm-scroller {
      font-family: 'RobotoMono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
    }
  }

  .schema_detail {
    .title_inner {
      align-items: center;
    }
    .filter_item {
      margin-left: variables.$spacing_16;
      border: 1px solid var(--gray-400);
      border-radius: 4px;

      .filter_desc {
        font-size: 1.5rem;
        font-weight: 600;
        color: var(--gray-800);
      }

      .icon_arrow {
        width: 16px;
        height: 16px;
        margin-left: variables.$spacing_16;
        color: var(--gray-600);
      }
    }
    .dropdown {
      top: 36px;
      max-height: 400px;
      overflow: auto;
    }
    .btn_area {
      display: flex;
      align-items: center;
    }
    .desc {
      padding-left: variables.$spacing_16;
      @include mixins-lib.rfonts(14, 22, 400);
      color: var(--red-0);
    }
  }

  .badge {
    background-color: var(--gray-200);
    color: var(--gray-700);
    font-size: 1.1rem;
    font-weight: 400;
    padding: 2px 4px;
    border-radius: 4px;
    margin-left: 4px;
    word-break: keep-all;

    display: inline-block;
    max-width: 60px;
    text-overflow: ellipsis;
    overflow: hidden;

    .icon {
      color: var(--gray-600);
    }
  }
  .sidebar .badge {
    margin-left: 0;
  }
  .detail_content .badge {
    display: flex;
    align-items: center;
    gap: 6px;
    text-overflow: initial;
    margin-left: 0;
    max-width: 100%;
    font-size: 1.3rem;
    padding: 4px 6px;
    border-radius: 4px;
  }
}

@keyframes toast {
  0% {
    opacity: 0;
    transform: translate(0, calc(-100% - 6px));
  }

  100% {
    opacity: 1;
    transform: translate(0, calc(-100% - 16px));
  }
}

